test/testdata/classes/instance/blank_field_access_error.lox
class Foo {
  bar() {
    print this._; // error: _ cannot be used as a field name
  }
}
var foo = Foo();
foo.bar();
